# dynamic-car-mpc

./: CHANGELOG.md  README.md  carla_mpc.py  config.py  drive.py  drive_pygame.py  drive_pygame_3d.py  dynamic_bicycle_mpc.py  manual_drive.py  plot_trace.py  pyproject.toml  requirements.txt  simulate.py  test.py
src/dcmpc/: __init__.py  ab_compare.py  carla_bridge.py  config.py  controller.py  lidar_view3d.py  manual_drive.py  planner.py  plot_trace.py  simulate.py  tracker.py
src/dcmpc/viz/: __init__.py  chase_3d.py  drive.py  top_down.py
